# middleware/auth.js
@@ -1,0 +1,11 @@
+const isAuthenticated = (req, res, next) => {
+  if (req.isAuthenticated()) {
+    return next();
+  }
+  return res.status(401).json({
+    message: "Unauthorized. Please log in to access this resource.",
+    loginUrl: "/auth/github",
+  });
+};
+
+module.exports = { isAuthenticated };
