# routes/teams.js
@@ -1,20 +1,26 @@
 const express = require("express");
 const router = express.Router();
 const teamsController = require("../controllers/teamsController");
+const { isAuthenticated } = require("../middleware/auth");
 
+// Public routes - anyone can view teams
 // #swagger.tags = ['teams']
 router.get("/", teamsController.getAllTeams);
 
 // #swagger.tags = ['teams']
 router.get("/:id", teamsController.getSingleTeam);
 
+// Protected routes - require authentication
 // #swagger.tags = ['teams']
-router.post("/", teamsController.createTeam);
+// #swagger.security = [{ "githubOAuth": [] }]
+router.post("/", isAuthenticated, teamsController.createTeam);
 
 // #swagger.tags = ['teams']
-router.put("/:id", teamsController.updateTeam);
+// #swagger.security = [{ "githubOAuth": [] }]
+router.put("/:id", isAuthenticated, teamsController.updateTeam);
 
 // #swagger.tags = ['teams']
-router.delete("/:id", teamsController.deleteTeam);
+// #swagger.security = [{ "githubOAuth": [] }]
+router.delete("/:id", isAuthenticated, teamsController.deleteTeam);
 
 module.exports = router;
